pre-deployment: externalize secrets, fix CORS, add Dockerfile, fix scheduler